--- a/ProductManagement_Backend/OrderService/src/main/resources/application.properties
+++ b/ProductManagement_Backend/OrderService/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=OrderService
+
+
+server.port=8083
+
+spring.datasource.url=jdbc:mysql://localhost:3306/product_management_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Hari10324
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
